# AI-Movie-Shorts

./: .gitignore  CMakeLists.txt  README.md  client_secrets.json  combine_srt_script.py  config.json  get_movie_summary.py  main.c  main.py  make_mp3_same_volume.py  rename_files.py  requirements.txt  run.sh  setup.bash  setup.bat  setup.sh  tiktok_resize.py  timestamp_assignments.py  upload_action.py  upload_tiktok.py  youtube_upload.py  youtube_upload.py-oauth2.json
output/: dfghd
scripts/: scrape_script.py  scrape_subtitles.py
src/: cli.c  dirent_port.h  generator.c  generator.h  main.c  platform_open.c  platform_open.h  ui_main.c
